--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1959,7 +1959,7 @@
     transition:.2s all ease;
 }
 ._feed_inner_timeline_cooment_area {
-    padding:24px 24px 10px;
+    padding:12px 24px 4px;
 }
 ._feed_inner_comment_box {
     background: #F6F6F6;
@@ -5910,7 +5910,7 @@
 
 /*---- Comment Reply css -----*/
 ._timline_comment_main {
-    padding: 24px 24px 10px;
+    padding: 6px 24px 10px;
 }
 ._comment_main {
     display: flex;
